--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using Bookworm.Web.ViewModels.Categories
 @using Bookworm.Web.ViewModels.Languages
 @using Bookworm.Web.ViewModels.Books
+@using Bookworm.Web.ViewModels.Books.ListingViewModels
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
 @using Bookworm.Web.ViewModels.Quotes.QuoteInputModels
