Add CSS file for Categories page

--- a/Web/Bookworm.Web/Views/Book/All.cshtml
+++ b/Web/Bookworm.Web/Views/Book/All.cshtml
@@ -2,14 +2,8 @@
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 
 @{
-    var titleCardModel = new TitleCardPartialViewModel
-    {
-        Title = ViewData["Title"] as string,
-        Count = Model.RecordsCount
-    };
-
+    var titleCardModel = new TitleCardPartialViewModel { Title = ViewData["Title"] as string, Count = Model.RecordsCount };
     string requestToken = Antiforgery.GetAndStoreTokens(Context).RequestToken;
-
     var isUserAuthenticated = this.User.Identity.IsAuthenticated;
 }
 
@@ -23,13 +17,21 @@
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
-@if (isUserAuthenticated)
+@if (isUserAuthenticated && Model.Books.Any())
 {
     <partial name="PartialViews/_BooksSearchInputPartial" />
     <select class="languagesSelect" multiple="multiple"></select>
 }
 
-<partial name="PartialViews/_BookListingPartial" model="@Model.Books" />
+@if (Model.Books.Any())
+{
+    <partial name="PartialViews/_BookListingPartial" model="@Model.Books" />
+}
+else
+{
+    <h3 class="display-4 text-center mt-5">Sorry, no books in @Model.CategoryName category yet!</h3>
+    <h4 class="display-4 text-center">Want to change that?<a asp-controller="Book" asp-action="Upload">Click here</a></h4>
+}
 
 @if (Model.PagesCount > 1)
 {
