--- a/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
+++ b/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
@@ -2,10 +2,15 @@
 
 @{
     this.ViewData["Title"] = "Favorite Books";
-    this.ViewData["Icon-Class"] = "fa-book";
+
+    var titleCardModel = new TitleCardPartialViewModel
+    {
+        Title = ViewData["Title"] as string,
+        IconClass = "fa-book"
+    };
 }
 
-<partial name="PartialViews/_TitleCardPartial" />
+<partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
 
 <div class="row">
     @foreach (var book in Model)
