--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_EditCommentModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_EditCommentModalPartial.cshtml
@@ -6,7 +6,8 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Edit Comment</h1>
+                <h1 class="modal-title fs-3" id="exampleModalLabel">Edit Comment</h1>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
             <form method="post" asp-controller="Comment" asp-action="Edit">
                 <input type="hidden" name="editCommentId" class="modelIdInput" value="" />
@@ -15,11 +16,8 @@
                     <textarea id="editCommentTextarea" name="content" rows="15"></textarea>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-danger px-5 fs-4" data-bs-dismiss="modal">
+                    <button type="submit" class="btn btn-danger px-5 fs-3 w-100" data-bs-dismiss="modal">
                         Edit<i class="fa-solid fa-pen-to-square ms-2"></i>
-                    </button>
-                    <button type="button" class="btn btn-primary px-5 fs-4" data-bs-dismiss="modal">
-                        Close
                     </button>
                 </div>
             </form>
