--- a/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_RateBookModalPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/Modals/_RateBookModalPartial.cshtml
@@ -6,7 +6,8 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Rate Book</h1>
+                <h1 class="modal-title fs-3" id="exampleModalLabel">Rate Book</h1>
+                <i class="fa-solid fa-x btn-modal-close" data-bs-dismiss="modal" aria-label="Close"></i>
             </div>
             <div class="modal-body">
                 <div class="container-wrapper">
@@ -30,15 +31,10 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button"
-                        class="btn btn-warning fs-5 px-5 border-3 border-dark"
-                        data-bs-dismiss="modal">
-                    Close
-                </button>
                 <button data-model-id="@Model.Id"
                         id="rateBtn"
                         type="button"
-                        class="btn btn-success fs-5 px-5 border-3 border-dark"
+                        class="btn fs-3 px-5 border-3 border-dark w-100"
                         data-bs-dismiss="modal">
                     Rate
                 </button>
