--- a/Web/Bookworm.Web/Views/Shared/PartialViews/_CommentsButtonsPartial.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/PartialViews/_CommentsButtonsPartial.cshtml
@@ -2,32 +2,29 @@
     <div class="btn-group"
          role="group"
          aria-label="Basic radio toggle button group">
-        <input
-            type="radio"
-            class="btn-check"
-            name="btnradio"
-            id="sortCommentsByDateAsc"
-            autocomplete="off"
-            onclick="getSortedCommentsByDateAsc()">
+        <input type="radio"
+               class="btn-check"
+               name="btnradio"
+               id="sortCommentsByDateAsc"
+               autocomplete="off"
+               onclick="getSortedCommentsByDateAsc()">
         <label class="btn border border-2" for="sortCommentsByDateAsc">Sort by date asc</label>
 
-        <input
-            type="radio"
-            class="btn-check"
-            name="btnradio"
-            id="sortCommentsByDateDesc"
-            autocomplete="off"
-            onclick="getSortedCommentsByDateDesc()"
-            checked>
+        <input type="radio"
+               class="btn-check"
+               name="btnradio"
+               id="sortCommentsByDateDesc"
+               autocomplete="off"
+               onclick="getSortedCommentsByDateDesc()"
+               checked>
         <label class="btn border border-2" for="sortCommentsByDateDesc">Sort by date desc</label>
 
-        <input
-            type="radio"
-            class="btn-check"
-            name="btnradio"
-            id="sortCommentsByNetWorthDesc"
-            autocomplete="off"
-            onclick="getSortedCommentsByNetWorthDesc()">
+        <input type="radio"
+               class="btn-check"
+               name="btnradio"
+               id="sortCommentsByNetWorthDesc"
+               autocomplete="off"
+               onclick="getSortedCommentsByNetWorthDesc()">
         <label class="btn border border-2" for="sortCommentsByNetWorthDesc">Sort by net worth desc</label>
     </div>
 </div>
