--- a/Web/Bookworm.Web/wwwroot/css/bookDetails.css
+++ b/Web/Bookworm.Web/wwwroot/css/bookDetails.css
@@ -50,9 +50,11 @@
 }
 
     .bookDetailsActionsSection a,
-    .bookDetailsActionsSection button {
+    .bookDetailsActionsSection button,
+    .bookDetailsActionsSection a:hover,
+    .bookDetailsActionsSection button:hover {
         font-size: 1.4rem;
-        border: solid 2px black;
+        border: solid 2px var(--clr-secondary);
         flex-basis: 50%;
     }
 
@@ -64,8 +66,15 @@
 
     .bookDetailsDescSection .card {
         font-size: 1.2rem;
-        border: solid 2px black;
+        border: solid 3px var(--clr-secondary);
+        background-color: var(--clr-primary);
+        color: white;
     }
+
+        .bookDetailsDescSection .card .card-header {
+            border-bottom: solid 3px var(--clr-secondary);
+            font-size: 1.5rem;
+        }
 
         .bookDetailsDescSection .card .card-body {
             text-align: justify;
@@ -89,19 +98,26 @@
         .bookDetailsCommentsSection .formContainer .button {
             border: solid 3px black;
             padding: 0.5rem 2rem;
+            background-color: var(--clr-secondary);
         }
 
+            .bookDetailsCommentsSection .formContainer .button:hover {
+                color: black;
+            }
+
         .bookDetailsCommentsSection .formContainer form {
-            border: solid 2px black;
+            border: solid 2px var(--clr-secondary);
             border-radius: 15px;
+            background-color: var(--clr-primary);
             padding: 2rem;
             width: 100%;
         }
 
 .commentsSection {
     padding: 2rem 1rem;
-    border: solid 2px black;
+    border: solid 3px var(--clr-secondary);
     border-radius: 15px;
+    background-color: var(--clr-primary);
 }
 
     .commentsSection .sortCommentsBtnsContainer {
@@ -112,13 +128,23 @@
 
         .commentsSection .sortCommentsBtnsContainer .btn-group {
             width: 70%;
-            border: solid 2px black;
         }
 
             .commentsSection .sortCommentsBtnsContainer .btn-group label {
-                font-weight: bold;
+                background-color: var(--clr-secondary);
+                color: black;
                 font-size: 1.3rem;
-                font-style: italic;
+                border: solid 2px black !important;
+            }
+
+            .commentsSection .sortCommentsBtnsContainer .btn-group .btn-check:hover + .btn {
+                background-color: #c7fcec;
+                color: black;
+            }
+
+            .commentsSection .sortCommentsBtnsContainer .btn-group .btn-check:checked + .btn {
+                background-color: #c7fcec;
+                color: black;
             }
 
     .commentsSection .commentsContainer {
@@ -135,9 +161,24 @@
         gap: 1rem;
     }
 
+        .commentsSection .commentActionsContainer .btnsContainer {
+            display: flex;
+            gap: 0.5rem;
+            justify-content: center;
+            align-items: center;
+        }
+
+            .commentsSection .commentActionsContainer .btnsContainer button {
+                border: solid 1px black;
+            }
+
+                .commentsSection .commentActionsContainer .btnsContainer button i {
+                    font-size: 2rem;
+                }
+
     .commentsSection .card {
         width: 70%;
-        border: solid 2px black;
+        border: solid 3px var(--clr-secondary);
         font-size: 1.1rem;
     }
 
@@ -146,6 +187,8 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+            background-color: none !important;
+            border-bottom: solid 3px var(--clr-secondary);
         }
 
             .commentsSection .card .card-header .arrowsContainer {
@@ -167,6 +210,10 @@
     color: #34AC9E;
 }
 
+#rateBtn {
+    background-color: var(--clr-secondary);
+}
+
 .rating-wrapper {
     align-self: center;
     border-radius: 5rem;
@@ -174,7 +221,7 @@
     direction: rtl !important;
     padding: 1.5rem 2.5rem;
     margin-left: auto;
-    border: solid 2px #1abc9c;
+    border: solid 3px #1abc9c;
 }
 
     .rating-wrapper label {
@@ -183,7 +230,7 @@
         display: inline-flex;
         font-size: 3rem;
         padding: 1rem .6rem;
-        transition: color 0.5s;
+        transition: color 0.3s;
     }
 
     .rating-wrapper input {
