--- a/Web/Bookworm.Web/Views/Quote/Upload.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Upload.cshtml
@@ -22,7 +22,6 @@
     </button>
 </div>
 
-
 <!-- Modal for Movie Quote -->
 <div class="modal fade" id="movieModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-centered">
@@ -34,15 +33,16 @@
             <div class="modal-body uploadQuoteModalContainer">
                 <img class="col-4" src="~/images/movieQuote.jpg" />
                 <form method="post" asp-controller="Quote" asp-action="Upload">
+                    <input type="hidden" asp-for="@Model.Type" value="@QuoteType.MovieQuote"></input>
                     <div class="form-group fs-4">
-                        <label asp-for="@Model.MovieQuoteModel.Content">Content*</label>
-                        <textarea asp-for="@Model.MovieQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
-                        <span asp-validation-for="@Model.MovieQuoteModel.Content" class="small text-danger"></span>
+                        <label asp-for="@Model.Content">Content*</label>
+                        <textarea asp-for="@Model.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
+                        <span asp-validation-for="@Model.Content" class="small text-danger"></span>
                     </div>
                     <div class="form-group mt-4 fs-4">
-                        <label asp-for="@Model.MovieQuoteModel.MovieTitle">Movie Title*</label>
-                        <input asp-for="@Model.MovieQuoteModel.MovieTitle" type="text" class="form-control border border-2 fs-5">
-                        <span asp-validation-for="@Model.MovieQuoteModel.MovieTitle" class="small text-danger"></span>
+                        <label asp-for="@Model.MovieTitle">Movie Title*</label>
+                        <input asp-for="@Model.MovieTitle" type="text" class="form-control border border-2 fs-5">
+                        <span asp-validation-for="@Model.MovieTitle" class="small text-danger"></span>
                     </div>
                     <div class="text-center mt-4 mb-5">
                         <button type="submit" class="btn button form-button">
@@ -66,20 +66,21 @@
             <div class="modal-body uploadQuoteModalContainer">
                 <img class="img-fluid" src="~/images/bookQuote.jpg" />
                 <form method="post" asp-controller="Quote" asp-action="Upload">
+                    <input type="hidden" asp-for="@Model.Type" value="@QuoteType.BookQuote"></input>
                     <div class="form-group">
-                        <label asp-for="@Model.BookQuoteModel.Content">Content*</label>
-                        <textarea asp-for="@Model.BookQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
-                        <span asp-validation-for="@Model.BookQuoteModel.Content" class="small text-danger"></span>
+                        <label asp-for="@Model.Content">Content*</label>
+                        <textarea asp-for="@Model.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
+                        <span asp-validation-for="@Model.Content" class="small text-danger"></span>
                     </div>
                     <div class="form-group mt-4">
-                        <label asp-for="@Model.BookQuoteModel.BookTitle">Book Title*</label>
-                        <input asp-for="@Model.BookQuoteModel.BookTitle" type="text" class="form-control border border-2 fs-5">
-                        <span asp-validation-for="@Model.BookQuoteModel.BookTitle" class="small text-danger"></span>
+                        <label asp-for="@Model.BookTitle">Book Title*</label>
+                        <input asp-for="@Model.BookTitle" type="text" class="form-control border border-2 fs-5">
+                        <span asp-validation-for="@Model.BookTitle" class="small text-danger"></span>
                     </div>
                     <div class="form-group mt-4">
-                        <label asp-for="@Model.BookQuoteModel.AuthorName">Author's Name*</label>
-                        <input asp-for="@Model.BookQuoteModel.AuthorName" type="text" class="form-control border border-2 fs-5">
-                        <span asp-validation-for="@Model.BookQuoteModel.AuthorName" class="small text-danger"></span>
+                        <label asp-for="@Model.AuthorName">Author's Name*</label>
+                        <input asp-for="@Model.AuthorName" type="text" class="form-control border border-2 fs-5">
+                        <span asp-validation-for="@Model.AuthorName" class="small text-danger"></span>
                     </div>
                     <div class="text-center mt-4 mb-5">
                         <button type="submit" class="btn button form-button">
@@ -103,16 +104,16 @@
             <div class="modal-body uploadQuoteModalContainer">
                 <img class="col-4" src="~/images/generalQuote.jpg" />
                 <form method="post" asp-controller="Quote" asp-action="Upload">
-                    <input type="hidden" value="@QuoteType.GeneralQuote" />
+                    <input type="hidden" asp-for="@Model.Type" value="@QuoteType.GeneralQuote"></input>
                     <div class="form-group fs-4">
-                        <label asp-for="@Model.GeneralQuoteModel.Content">Content*</label>
-                        <textarea asp-for="@Model.GeneralQuoteModel.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
-                        <span asp-validation-for="@Model.GeneralQuoteModel.Content" class="small text-danger"></span>
+                        <label asp-for="@Model.Content">Content*</label>
+                        <textarea asp-for="@Model.Content" class="form-control border border-2 fs-5" rows="6"></textarea>
+                        <span asp-validation-for="@Model.Content" class="small text-danger"></span>
                     </div>
                     <div class="form-group mt-4 fs-4">
-                        <label asp-for="@Model.GeneralQuoteModel.AuthorName">Author's Name*</label>
-                        <input asp-for="@Model.GeneralQuoteModel.AuthorName" type="text" class="form-control border border-2 fs-5">
-                        <span asp-validation-for="@Model.GeneralQuoteModel.AuthorName" class="small text-danger"></span>
+                        <label asp-for="@Model.AuthorName">Author's Name*</label>
+                        <input asp-for="@Model.AuthorName" type="text" class="form-control border border-2 fs-5">
+                        <span asp-validation-for="@Model.AuthorName" class="small text-danger"></span>
                     </div>
                     <div class="text-center mt-4 mb-5">
                         <button type="submit" class="btn button form-button">
