Update the upload quote service

--- a/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BaseQuoteInputModel
+﻿@* @model BaseQuoteInputModel
 
 @{
     this.ViewData["Title"] = "Edit Quote";
@@ -71,3 +71,4 @@
     </form>
 </div>
 
+ *@
