--- a/Web/Bookworm.Web/Views/Quote/Edit.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/Edit.cshtml
@@ -9,65 +9,25 @@
 
 <div class="editQuoteContainer">
     <form asp-controller="Quote" asp-action="Edit" class="editQuoteForm">
-
         <div asp-validation-summary="All" class="text-danger"></div>
-
         <input type="hidden" asp-for="@Model.Id" value="@Model.Id" />
-
         @if (Model.Type == QuoteType.GeneralQuote)
         {
-            <input type="hidden" asp-for="@Model.Type" value="@QuoteType.GeneralQuote"></input>
-            <div class="form-group justify-content-center">
-                <label asp-for="@Model.Content"><strong>Content</strong></label>
-                <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
-                <span asp-validation-for="@Model.Content" class="text-danger"></span>
-            </div>
-            <div class="form-group my-3">
-                <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
-                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
-                <span asp-validation-for="@Model.AuthorName" class="text-danger"></span>
-            </div>
+            <partial name="PartialViews/Quotes/QuotesTypesInputs/_GeneralQuoteInputsPartial" />
         }
         else if (Model.Type == QuoteType.BookQuote)
         {
-            <input type="hidden" asp-for="@Model.Type" value="@QuoteType.BookQuote"></input>
-            <div class="form-group justify-content-center">
-                <label asp-for="@Model.Content"><strong>Content</strong></label>
-                <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
-                <span asp-validation-for="@Model.Content" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="@Model.BookTitle"><strong>Book Title</strong></label>
-                <input asp-for="@Model.BookTitle" value="@Model.BookTitle" type="text" class="form-control">
-                <span asp-validation-for="@Model.BookTitle" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="@Model.AuthorName"><strong>Author's Name</strong></label>
-                <input value="@Model.AuthorName" asp-for="@Model.AuthorName" type="text" class="form-control">
-                <span asp-validation-for="@Model.AuthorName" class="text-danger"></span>
-            </div>
+            <partial name="PartialViews/Quotes/QuotesTypesInputs/_BookQuoteInputsPartial" />
         }
         else if (Model.Type == QuoteType.MovieQuote)
         {
-            <input type="hidden" asp-for="@Model.Type" value="@QuoteType.MovieQuote"></input>
-            <div class="form-group justify-content-center">
-                <label asp-for="@Model.Content"><strong>Content</strong></label>
-                <textarea asp-for="@Model.Content" class="form-control" rows="6"></textarea>
-                <span asp-validation-for="@Model.Content" class="text-danger"></span>
-            </div>
-            <div class="form-group my-3">
-                <label asp-for="@Model.MovieTitle"><strong>Movie Title</strong></label>
-                <input asp-for="@Model.MovieTitle" value="@Model.MovieTitle" type="text" class="form-control">
-                <span asp-validation-for="@Model.MovieTitle" class="text-danger"></span>
-            </div>
+            <partial name="PartialViews/Quotes/QuotesTypesInputs/_MovieQuoteInputsPartial"/>
         }
-
         <div class="editQuoteFormBtnContainer mt-3">
             <button type="submit" class="btn">
                 Edit<i class="fa fa-square-pen ms-2"></i>
             </button>
         </div>
-
     </form>
 </div>
 
