--- a/Web/Bookworm.Web/Views/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Views/_ViewImports.cshtml
@@ -1,15 +1,15 @@
 ﻿@using Bookworm.Web
 @using Bookworm.Common
-@using Bookworm.Web.ViewModels.Home
+@using Bookworm.Common.Enums;
 @using Bookworm.Data.Models.Enums
 @using Bookworm.Web.ViewModels
+@using Bookworm.Web.ViewModels.Pagination
+@using Bookworm.Web.ViewModels.Home
 @using Bookworm.Web.ViewModels.Quotes
 @using Bookworm.Web.ViewModels.Categories
 @using Bookworm.Web.ViewModels.Languages
 @using Bookworm.Web.ViewModels.Books
-@using Bookworm.Web.ViewModels.Books.ListingViewModels
 @using Bookworm.Web.ViewModels.Comments
 @using Bookworm.Web.ViewModels.Users
-@using Bookworm.Common.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Bookworm.Web
