--- a/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
+++ b/Web/Bookworm.Web/Views/FavoriteBook/Favorites.cshtml
@@ -2,12 +2,7 @@
 
 @{
     this.ViewData["Title"] = "Favorite Books";
-
-    var titleCardModel = new TitleCardPartialViewModel
-    {
-        Title = ViewData["Title"] as string,
-        IconClass = "fa-book"
-    };
+    var titleCardModel = new TitleCardPartialViewModel { Title = ViewData["Title"] as string, IconClass = "fa-book" };
 }
 
 <partial name="PartialViews/_TitleCardPartial" model=titleCardModel />
