--- a/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
+++ b/Web/Bookworm.Web/Views/Quote/UserQuotes.cshtml
@@ -12,7 +12,7 @@
 
 @if (Model.PagesCount > 1)
 {
-    <partial name="PartialViews/Pagination/_QuotesPaginationPartial" />
+    <vc:pagination controller="Quote" action="UserQuotes" is-for-books="@false" model="@Model"></vc:pagination>
 }
 
 <div class="modal fade"
