--- a/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
+++ b/Web/Bookworm.Web/Views/Book/UserBooks.cshtml
@@ -27,7 +27,7 @@
 
     @if (Model.PagesCount > 1)
     {
-        <vc:pagination controller="Book" action="UserBooks" is-for-books="@true" model="@Model"></vc:pagination>
+        <vc:pagination controller="Book" action="UserBooks" is-for-books="@false" model="@Model"></vc:pagination>
     }
 }
 else
