--- a/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
+++ b/Web/Bookworm.Web/Views/Shared/_Layout.cshtml
@@ -56,8 +56,7 @@
         <button class="topArrow"><i class="fa fa-arrow-up"></i></button>
     </div>
 
-
-    <footer class="bookworm-footer py-4 text-center text-white d-flex align-items-center justify-content-center fs-4">
+    <footer class="bookworm-footer">
         <span>
             &copy; @DateTime.Now.Year - @GlobalConstants.SystemName - <a class="privacy-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </span>
@@ -66,10 +65,11 @@
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" asp-append-version="true"></script>
     <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js" asp-append-version="true"></script>
-
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
-
     <script src="~/js/site.js" asp-append-version="true"></script>
+
+    <script src="~/js/signalR/signalr.min.js"></script>
+    <script src="~/js/signalR/notification.js"></script>
 
     <partial name="PartialViews/_UserMessagesPartial" />
 
