--- a/Web/Bookworm.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using Bookworm.Data.Models
 @using Bookworm.Web.Areas.Identity
 @using Bookworm.Web.Areas.Identity.Pages
+@using Bookworm.Web.Areas.Identity.Pages.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using Bookworm.Data.Models
