Remove category image URL from Category
Add categories images to server and remove the category image URL property

--- a/Web/Bookworm.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Web/Bookworm.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,6 +1,3 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using Bookworm.Data.Models
-@using Bookworm.Web.Areas.Identity
-@using Bookworm.Web.Areas.Identity.Pages
+﻿@using Bookworm.Web.Areas.Identity.Pages
 @using Bookworm.Web.Areas.Identity.Pages.Account
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
