--- a/Web/Bookworm.Web/Views/Home/Index.cshtml
+++ b/Web/Bookworm.Web/Views/Home/Index.cshtml
@@ -3,61 +3,66 @@
 @{
     this.ViewData["Title"] = "Home Page";
     var titleCardModel = new TitleCardPartialViewModel { Title = $"Welcome to {GlobalConstants.SystemName}!", IconClass = "fa fa-book" };
-    var popularBooksTitleCardModel = new TitleCardPartialViewModel { Title = "Popular Books", IconClass = "fa fa-book" };
     var recentBooksTitleCardModel = new TitleCardPartialViewModel { Title = "Recent Books", IconClass = "fa fa-book" };
+    var popularBooksTitleCardModel = new TitleCardPartialViewModel { Title = "Popular Books", IconClass = "fa fa-book" };
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/bookListing.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/index.css" asp-append-version="true" />
 }
 
-<section class="welcomeSection mt-5">
-    <h1 class="text-center mb-5">Welcome to @GlobalConstants.SystemName!</h1>
-    <div class="card mb-5 col-8 d-flex justify-content-center mx-auto border-2 border-dark">
-        <div class="card-header fs-4">
-            Quote
-        </div>
-        <div class="card-body">
-            <blockquote class="blockquote ">
-                <p class="text-center">@Model.RandomQuote.Content</p>
-                @if (Model.RandomQuote.AuthorName != null)
-                {
-                    <footer class="blockquote-footer text-end">
-                        @Model.RandomQuote.AuthorName
-                    </footer>
-                }
-                @if (Model.RandomQuote.BookTitle != null)
-                {
-                    <footer class="blockquote-footer text-end">
-                        From the book: @Model.RandomQuote.BookTitle
-                    </footer>
-                }
-                @if (Model.RandomQuote.MovieTitle != null)
-                {
-                    <footer class="blockquote-footer text-end">
-                        From the movie: @Model.RandomQuote.MovieTitle
-                    </footer>
-                }
-            </blockquote>
+<section class="welcomeSection">
+    <h1>Welcome to @GlobalConstants.SystemName!</h1>
+    <p>
+        📚 Share your favorite reads with the Bookworm community!
+        Easily upload and share books, from classics to contemporary bestsellers, and connect with fellow book lovers.
+    </p>
+    <div class="cardContainer">
+        <div class="card">
+            <div class="card-header">
+                Quote
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote">
+                    <p class="text-center">@Model.RandomQuote.Content</p>
+                    @if (Model.RandomQuote.AuthorName != null)
+                    {
+                        <footer class="blockquote-footer text-end">
+                            @Model.RandomQuote.AuthorName
+                        </footer>
+                    }
+                    @if (Model.RandomQuote.BookTitle != null)
+                    {
+                        <footer class="blockquote-footer text-end">
+                            From the book: @Model.RandomQuote.BookTitle
+                        </footer>
+                    }
+                    @if (Model.RandomQuote.MovieTitle != null)
+                    {
+                        <footer class="blockquote-footer text-end">
+                            From the movie: @Model.RandomQuote.MovieTitle
+                        </footer>
+                    }
+                </blockquote>
+            </div>
         </div>
     </div>
+    @if (this.User.Identity.IsAuthenticated)
+    {
+        <section class="homeBtnsSection">
+            <div>
+                <a asp-controller="Book" asp-action="Upload" class="btn">
+                    Upload Book<i class="fa fa-book ms-2"></i>
+                </a>
+            </div>
+            <div>
+                <a asp-controller="Quote" asp-action="Upload" class="btn">
+                    Upload Quote<i class="fa fa-square-pen ms-2"></i>
+                </a>
+            </div>
+        </section>
+    }
 </section>
-
-@if (this.User.Identity.IsAuthenticated)
-{
-    <section class="homeBtnsSection">
-        <div>
-            <a asp-controller="Book" asp-action="Upload" class="btn button btn-lg">
-                Upload Book
-            </a>
-        </div>
-        <div>
-            <a asp-controller="Quote" asp-action="Upload" class="btn button btn-lg">
-                Upload Quote
-            </a>
-        </div>
-    </section>
-}
 
 <section class="my-5">
     <partial name="PartialViews/_TitleCardPartial" model=recentBooksTitleCardModel />
